force-app/main/default/objects/Case_Escalations__c/Case_Escalations__c.object-meta.xml
<CustomObject>
    <description>Object to store case escalations</description>
    <label>Case Escalation</label>
    <nameField>
        <displayFormat>ESC-{00000}</displayFormat>
        <label>Case Escalation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>