force-app/main/default/objects/Case_Escalations__c/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <formula>CaseLookup__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>