force-app/main/default/objects/Case_Escalations__c/fields/CaseLookup__c.field-meta.xml
<CustomField>
    <fullName>CaseLookup__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Escalations</relationshipLabel>
    <relationshipName>Case_Escalations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>