force-app/main/default/objects/Case_Escalations__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual or queue escalation is assigned to</description>
    <label>Escalated To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>