force-app/main/default/objects/Case_Escalations__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <description>Escalation Level of current escalation</description>
    <label>Escalation Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
            <value>
                <fullName>Expert Services</fullName>
            </value>
            <value>
                <fullName>Implementation Team</fullName>
            </value>
            <value>
                <fullName>Practice Leader</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>