force-app/main/default/objects/Case_Escalations__c/fields/Reason_for_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Escalation__c</fullName>
    <description>Reason for escalation</description>
    <label>Reason for Escalation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>